--- a/w03/d03/starter/index.html
+++ b/w03/d03/starter/index.html
@@ -26,7 +26,7 @@
         <h3>Trending GIFs</h3>
         <p>The top 25 GIFs on Giphy right here, right now.</p>
 
-        <ul id="trending-results"></ul>
+        <div id="trending-results"></div>
       </section>
 
       <section>
