--- a/w05/d02/instructor/frontend/index.html
+++ b/w05/d02/instructor/frontend/index.html
@@ -18,5 +18,7 @@
     <p>Welcome <span class="nickname"></span></p>
     <button type="submit" class="btn-login">Sign In</button>
     <button type="submit" class="btn-logout" style="display:none;">Sign Out</button>
+
+    <main></main>
   </body>
 </html>
