--- a/w07/d04/mockup/index.html
+++ b/w07/d04/mockup/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,7 +13,7 @@
     </div>
     <div class="video-main col-md-8">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1TphEh0Qgv0"></iframe>
+        <iframe src="https://www.youtube.com/embed/1TphEh0Qgv0" class="embed-responsive-item"></iframe>
       </div>
       <div class="details">
         <div>Arrested Development - Chicken Dance (Whole Family)</div>
